bug with open hr box size on mobile

--- a/salon_fryzjerski/sass/main.scss
+++ b/salon_fryzjerski/sass/main.scss
@@ -1,17 +1,18 @@
-@import 'config';
+@import "config";
 
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;;
+  box-sizing: border-box;
 }
 
 body {
   line-height: 1.5;
-  font-family: 'Solway', sans-serif;
+  font-family: "Solway", sans-serif;
 }
 // Utility
-ul, a {
+ul,
+a {
   text-decoration: none;
   list-style: none;
   color: $light-color;
@@ -28,12 +29,20 @@ h1 {
 }
 
 @keyframes opacity {
-  from {opacity: 0}
-  to {opacity: 1};
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 @keyframes slider {
-  from {margin-left: -1500px;}
-  to {margin-left: inherit}
+  from {
+    margin-left: -1500px;
+  }
+  to {
+    margin-left: inherit;
+  }
 }
 
 #navbar {
@@ -53,7 +62,9 @@ h1 {
       display: flex;
       align-items: center;
       height: 100%;
-      img { height: 100%}
+      img {
+        height: 100%;
+      }
     }
   }
 
@@ -64,7 +75,7 @@ h1 {
       padding: 0 0.3rem;
       text-transform: uppercase;
     }
-    a{
+    a {
       padding: 0.75rem;
       &:hover {
         color: $supp-color;
@@ -83,8 +94,8 @@ h1 {
   }
 }
 
-#showcase{
-  background: url('../img/showcase.jpg') no-repeat center center/cover;
+#showcase {
+  background: url("../img/showcase.jpg") no-repeat center center/cover;
   height: 95vh;
   margin-top: -12vh;
   .showcase-content {
@@ -101,18 +112,20 @@ h1 {
       animation-duration: 1.2s;
       animation-timing-function: ease-in;
     }
-    p{
-     animation: slider;
-     animation-duration: 1s; 
-     animation-timing-function: ease-in;
+    p {
+      animation: slider;
+      animation-duration: 1s;
+      animation-timing-function: ease-in;
     }
   }
 }
 
-#services, #open-hr {
+#services,
+#open-hr {
   background: $light-color;
   padding: 5rem 0;
-  h1, h2 {
+  h1,
+  h2 {
     text-align: center;
     color: $dark-color;
     img {
@@ -120,14 +133,21 @@ h1 {
     }
   }
   z-index: -1;
-  .services-content, .open-hr-content {
+  .services-content,
+  .open-hr-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 1rem 0;
-    hr {width: 50%; margin: 0 auto;}
+    flex-wrap: wrap;
+    padding: 0 2rem;
+    hr {
+      width: 50%;
+      margin: 0 auto;
+    }
 
-    .service, .day {
+    .service,
+    .day {
       width: 250px;
       height: 250px;
       display: flex;
@@ -153,7 +173,7 @@ h1 {
 
 // Changed only few properties - the rest is the same as in services
 #open-hr {
-  background: url('../img/open-hr.jpg') no-repeat center center/cover;
+  background: url("../img/open-hr.jpg") no-repeat center center/cover;
   background-attachment: fixed;
   h1 {
     text-shadow: 2px 2px $dark-color;
@@ -164,15 +184,18 @@ h1 {
   justify-content: center;
   align-items: center;
   width: 100%;
-  .open-hr-content{
+  .open-hr-content {
     .day {
       width: 150px;
       height: 150px;
       align-items: center;
       justify-content: center;
-      background: rgba($color: $light-color, $alpha:.8);
+      background: rgba($color: $light-color, $alpha: 0.8);
       box-shadow: none;
-      h2 {color: $dark-color; text-shadow: none;}
+      h2 {
+        color: $dark-color;
+        text-shadow: none;
+      }
       .day-hr {
         font-size: 1rem;
       }
@@ -195,12 +218,12 @@ h1 {
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    h1{
+    h1 {
       margin-bottom: 2rem;
       font-size: 2rem;
     }
     .img {
-      background: url('../img/opinion-img.jpg') no-repeat center center/cover;
+      background: url("../img/opinion-img.jpg") no-repeat center center/cover;
       width: 100px;
       height: 100px;
       border-radius: 50%;
@@ -211,7 +234,7 @@ h1 {
       i {
         cursor: pointer;
         color: $supp-color;
-        margin: .5rem auto;
+        margin: 0.5rem auto;
       }
     }
   }
@@ -219,10 +242,10 @@ h1 {
 
 #contact {
   height: 70vh;
-  background: url('../img/contact-bg.jpg') no-repeat center center/cover;
+  background: url("../img/contact-bg.jpg") no-repeat center center/cover;
   background-attachment: fixed;
   .contact-content {
-    background: rgba($color: #000000, $alpha: .6);
+    background: rgba($color: #000000, $alpha: 0.6);
     height: 100%;
     width: 100%;
     display: flex;
@@ -231,7 +254,7 @@ h1 {
     align-items: center;
     h1 {
       color: $light-color;
-      margin: .5rem 0;
+      margin: 0.5rem 0;
     }
     .phone {
       padding: 0 3rem;
@@ -247,10 +270,8 @@ h1 {
   text-align: center;
 }
 
-
 // Smartphone
 @media screen and (max-width: 768px) {
-
   #navbar {
     position: fixed;
     top: 0;
@@ -262,12 +283,12 @@ h1 {
       right: 0;
       width: 60%;
       height: 88vh;
-      background: rgba($color: $light-color, $alpha:1 );
+      background: rgba($color: $light-color, $alpha: 1);
       justify-content: space-around;
       transform: translateX(100%);
       transition: transform 0.5s ease-in-out;
       &::before {
-        content: '';
+        content: "";
         position: absolute;
         left: -70%;
         top: 0;
@@ -292,11 +313,17 @@ h1 {
       &::before {
         transform: translateX(0%);
       }
-    } 
-    .toggle{
-      .line-1 {transform: rotate(-45deg) translate(-7px, 8px);}
-      .line-2 {opacity: 0;}
-      .line-3 {transform: rotate(45deg) translate(-6px, -7px);}
+    }
+    .toggle {
+      .line-1 {
+        transform: rotate(-45deg) translate(-7px, 8px);
+      }
+      .line-2 {
+        opacity: 0;
+      }
+      .line-3 {
+        transform: rotate(45deg) translate(-6px, -7px);
+      }
     }
   }
   #showcase {
@@ -306,7 +333,9 @@ h1 {
       h1 {
         line-height: 1;
       }
-      p {margin: 2rem;}
+      p {
+        margin: 2rem;
+      }
     }
   }
 
@@ -319,10 +348,10 @@ h1 {
     .container {
       .services-content {
         flex-direction: column;
-        padding: .5rem;
+        padding: 0.5rem;
         .service {
           box-shadow: none;
-          margin: .5rem 0;
+          margin: 0.5rem 0;
           width: 100%;
         }
       }
@@ -353,5 +382,12 @@ h1 {
 
   #opinions {
     height: 100%;
+  }
+}
+
+@media screen and (max-width: 1024px) and (orientation: landscape) {
+  #open-hr .open-hr-content .day {
+    height: 120px;
+    width: 120px;
   }
 }
